add cart changes

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
 /.vs/GaitondeShoping/v17
+/.vs/Gaitonde web/config
+/.vs/Gaitonde web/FileContentIndex/b2ec941d-a4d3-4fea-9a12-88bfcd6c04b6.vsidx
+/.vs/Gaitonde web/FileContentIndex/4039e4b2-e610-473f-a817-d4ec85ed1a2f.vsidx
+/.vs/Gaitonde web/FileContentIndex
+/.vs/Gaitonde web/v17/.wsuo
+/.vs/Gaitonde web/v17/DocumentLayout.json
+/.vs/New folder/FileContentIndex/a701d865-1324-4787-af57-6c1b8f627527.vsidx
+/.vs/New folder/v17/.wsuo
+/.vs/New folder/v17/DocumentLayout.json
